filters issue fixed when resizing. login & sign-up buttons side by side fixed on mobile view. save last searched zip code.

--- a/frontend/web/css/results.css
+++ b/frontend/web/css/results.css
@@ -1027,7 +1027,7 @@ h2 {
     .mobile-logo{display:block; padding-top:25px;}
     /*.mobile-logo img{max-width:210px;}*/
     .result-sign-up{padding:12px 0px 10px 0px;}
-    .result-sign-up a{padding:12px 18px;}
+    .result-sign-up a{padding:12px 1px;font-size:12px;}
     .search-result-content{
         display:none;
         width:386px;
@@ -1582,3 +1582,4 @@ input[type="checkbox"]:checked + label.oper:before {
     background: rgb(66,129,244);
 }
 .show_on_mobile{display: none;}
+
